--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,13 @@ edition = "2024"
 
 [dependencies]
 bevy = { version = "0.17.0-rc.1", features = ["wayland"] }
+lin_alg = "1.3.6"
 # Compile low-severity logs out of native builds for performance.
 log = { version = "0.4", features = [
     "max_level_debug",
     "release_max_level_warn",
 ] }
+mcubes = "0.1.5"
 # Compile low-severity logs out of web builds for performance.
 tracing = { version = "0.1", features = [
     "max_level_debug",
