--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tracing = { version = "0.1", features = [
     "release_max_level_warn",
 ] }
 avian3d = { git = "https://github.com/ChristopherBiscardi/avian", branch = "bevy-0.17-temporaries" }
+tracing-subscriber = "0.3.20"
 
 [features]
 default = [
