--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ dev = [
     # Improve compile times for dev builds by linking Bevy as a dynamic library.
     "bevy/dynamic_linking",
     "bevy/bevy_dev_tools",
+    "bevy/trace_tracy",
 ]
 dev_native = [
     "dev",
