--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,7 @@ tracing = { version = "0.1", features = [
     "max_level_debug",
     "release_max_level_warn",
 ] }
-avian3d = { git = "https://github.com/ChristopherBiscardi/avian", branch = "bevy-0.17-temporaries" }
-# temp (avian depends on derive_more=1 without features, causing compilation error)
-derive_more = { version = "1", features = ["from"] }
+avian3d = { git = "https://github.com/Jondolf/avian", branch = "bevy-0.17" }
 tracing-subscriber = "0.3.20"
 rand = "0.9.2"
 
