--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,11 @@ edition = "2024"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-bevy = { version = "0.17.0-rc.2", features = ["wayland", "experimental_bevy_ui_widgets"] }
+bevy = { version = "0.17.0-rc.2", features = [
+    "wayland",
+    "experimental_bevy_ui_widgets",
+    "track_location",
+] }
 lin_alg = "1.3.6"
 # Compile low-severity logs out of native builds for performance.
 log = { version = "0.4", features = [
@@ -21,6 +25,9 @@ tracing = { version = "0.1", features = [
 avian3d = { git = "https://github.com/Jondolf/avian", branch = "bevy-0.17" }
 tracing-subscriber = "0.3.20"
 rand = "0.9.2"
+bevy_common_assets = { git = "https://github.com/NiklasEi/bevy_common_assets", branch = "bevy_main", version = "0.14.0-rc.1", default-features = false, features = [
+    "ron",
+] }
 
 [features]
 default = [
