--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-bevy = { version = "0.17.0-rc.2", features = [
+bevy = { version = "0.17.0", features = [
     "wayland",
     "experimental_bevy_ui_widgets",
     "track_location",
