--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ rand = "0.9.2"
 bevy_common_assets = { git = "https://github.com/NiklasEi/bevy_common_assets", branch = "bevy_main", version = "0.14.0-rc.1", default-features = false, features = [
     "ron",
 ] }
+bevy_skein = "0.3.0-rc.1"
 
 [features]
 default = [
