--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,62 @@ edition = "2024"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-bevy = { version = "0.17.0", features = [
+bevy = { version = "0.17.0", default-features = false, features = [
     "wayland",
     "experimental_bevy_ui_widgets",
     "track_location",
+    "std",
+    "async_executor",
+#     "android-game-activity",
+#     "android_shared_stdcxx",
+    "animation",
+    "bevy_asset",
+#     "bevy_audio",
+    "bevy_color",
+    "bevy_core_pipeline",
+    "bevy_post_process",
+    "bevy_anti_alias",
+#     "bevy_gilrs",
+    "bevy_gizmos",
+    "bevy_gltf",
+    "bevy_input_focus",
+    "bevy_log",
+    "bevy_mesh_picking_backend",
+    "bevy_pbr",
+    "bevy_picking",
+    "bevy_render",
+    "bevy_scene",
+    "bevy_image",
+    "bevy_mesh",
+    "bevy_camera",
+    "bevy_light",
+    "bevy_shader",
+#     "bevy_sprite",
+#     "bevy_sprite_picking_backend",
+#     "bevy_sprite_render",
+    "bevy_state",
+    "bevy_text",
+    "bevy_ui",
+    "bevy_ui_picking_backend",
+    "bevy_ui_render",
+    "bevy_window",
+    "bevy_winit",
+    "custom_cursor",
+    "default_font",
+    "hdr",
+    "ktx2",
+    "multi_threaded",
+    "png",
+    "reflect_auto_register",
+    "smaa_luts",
+    "sysinfo_plugin",
+    "tonemapping_luts",
+    "vorbis",
+    "webgl2",
+    "x11",
+    "wayland",
+    "debug",
+    "zstd_rust",
 ] }
 lin_alg = "1.3.6"
 # Compile low-severity logs out of native builds for performance.
@@ -22,10 +74,10 @@ tracing = { version = "0.1", features = [
     "max_level_debug",
     "release_max_level_warn",
 ] }
-avian3d = { git = "https://github.com/Jondolf/avian", branch = "bevy-0.17" }
+avian3d = "0.4"
 tracing-subscriber = "0.3.20"
 rand = "0.9.2"
-bevy_common_assets = { git = "https://github.com/NiklasEi/bevy_common_assets", branch = "bevy_main", version = "0.14.0-rc.1", default-features = false, features = [
+bevy_common_assets = { version = "0.14.0", default-features = false, features = [
     "ron",
 ] }
 bevy_skein = "0.3.0-rc.1"
